--- a/index.html
+++ b/index.html
@@ -12,12 +12,37 @@
 
     <div class="gallery-container">
         <div class="gallery-item">
-            <img src="images/YOUR_IMAGE_1.jpg" alt="圖片說明1" data-audio="audio/YOUR_AUDIO_1.mp3">
+            <img src="image/不會寫字的獅子.jpg" alt="不會寫字的獅子" data-audio="audio/不會寫字的獅子.m4a">
         </div>
         <div class="gallery-item">
-            <img src="images/YOUR_IMAGE_2.png" alt="圖片說明2" data-audio="audio/YOUR_AUDIO_2.mp3">
+            <img src="image/什麼都有書店.jpg" alt="什麼都有書店" data-audio="audio/什麼都有書店.m4a">
         </div>
+        <div class="gallery-item">
+            <img src="image/只是開玩笑為什麼不能說.jpg" alt="只是開玩笑為什麼不能說" data-audio="audio/只是開玩笑為什麼不能說.m4a">
         </div>
+        <div class="gallery-item">
+            <img src="image/我有理由.jpg" alt="我有理由" data-audio="audio/我有理由.m4a">
+        </div>
+        <div class="gallery-item">
+            <img src="image/我有意見.jpg" alt="我有意見" data-audio="audio/我有意見.m4a">
+        </div>
+        <div class="gallery-item">
+            <img src="image/怎麼睡成這個樣子.jpg" alt="怎麼睡成這個樣子" data-audio="audio/怎麼睡成這個樣子.m4a">
+        </div>
+        <div class="gallery-item">
+            <img src="image/原來發明筷子不是為了吃飯.jpg" alt="原來發明筷子不是為了吃飯" data-audio="audio/原來發明筷子不是為了吃飯.m4a">
+        </div>
+        <div class="gallery-item">
+            <img src="image/逃離吧腳就是用來跑的.jpg" alt="逃離吧腳就是用來跑的" data-audio="audio/逃離吧腳就是用來跑的.m4a">
+        </div>
+        <div class="gallery-item">
+            <img src="image/猜猜我在比什麼.jpg" alt="猜猜我在比什麼" data-audio="audio/猜猜我在比什麼.m4a">
+        </div>
+        <div class="gallery-item">
+            <img src="image/童話裡的建築大師.jpg" alt="童話裡的建築大師" data-audio="audio/童話裡的建築大師.m4a">
+        </div>
+
+    </div>
 
     <script src="script.js"></script>
 </body>
